# autobo

./: AGENTS.md  Agent.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  progress.md  vite.config.ts
.claude/: launch.json
docs/: BTC_BOT_AGENT_CONTEXT.md  COIN_OFFICE_GDD.md  automation-3-manual-order-presets.md  automation-3-market-favorites.md  automation-prompt-tick-trading-strategy.md  bot-trading-algorithm.md  convenience-manual-order-assist-plan.md  convenience-manual-order-assist-result.md  convenience-manual-order-guard-plan.md  convenience-manual-order-guard-result.md  convenience-manual-order-helper-plan.md  convenience-manual-order-helper-result.md  convenience-manual-order-preflight-plan.md  convenience-manual-order-preflight-result.md  convenience-manual-order-preview-plan.md  convenience-manual-order-preview-result.md  convenience-manual-order-quick-fill-plan.md  convenience-manual-order-quick-fill-result.md  convenience-manual-order-quickfill-plan.md  convenience-manual-order-quickfill-result.md  convenience-manual-order-review-plan.md  convenience-manual-order-review-result.md  convenience-manual-order-templates-plan.md  convenience-manual-order-templates-result.md  convenience-order-assist-plan.md  convenience-order-assist-result.md  convenience-order-quick-fill-plan.md  convenience-order-quick-fill-result.md  convenience-preferences-persistence-plan.md  convenience-recent-markets-plan.md  (+8 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+38 files in other folders)
